# flask-auth-service

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: release-drafter.yml
.github/workflows/: check.yaml  create_release.yaml  enforce-labels.yaml  release_tags.yaml
flask_auth_service/: __init__.py  app.py  cli.py
tests/: test_app.py
