[metadata]
name = flask-auth-service
version = 0.1.0
description = A simple Flask authentication service with Bearer token validation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/w6d-io/flask-auth-service
author = David ALEXANDRE
author_email = david.alexandre@w6d.io
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Flask

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask>=2.0.0
    python-dotenv>=0.19.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    flask-auth-service = flask_auth_service.cli:main